kubernetes/kube-system/envoy-gateway/routes/https-redirect.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
# HTTPRoute to redirect HTTP to HTTPS for all gateways
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: kube-system
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: public
      namespace: kube-system
      sectionName: http
    - name: internal
      namespace: kube-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
