kubernetes/kube-system/envoy-gateway/routes/wildcard-public.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wildcard-public
  namespace: kube-system
  annotations:
    external-dns.kubernetes.io/controller: none
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: public
      namespace: kube-system
      sectionName: https
  hostnames:
    - "*.eviljungle.com"
  rules:
    - backendRefs:
        - name: error-pages
          port: 8080
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
